apps/wiki/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  namespace: wiki
  lables:
    app: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      nodeSelector:
        node-type: bare-metal
      containers:
        - name: wiki
          image: requarks/wiki:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: wiki-storage
              mountPath: /wiki/data
      volumes:
        - name: wiki-storage
          persistentVolumeClaim:
            claimName: wiki-nfs-pvc
