apps/wiki/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-service
  namespace: wiki
  labels:
    app.kubernetes.io/name: wiki
spec:
  selector:
    app: wiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
